tests/NormalTests/paczka1/fuzzy1/49495851.err
Error in line 5: A63 S866 205,P
Error in line 1: A63 S866 41,1
Error in line 12: Dbug6 S866 9,3
Error in line 19: jRaez S866 86,6
Error in line 3: 4XcNcks A63 12,7
Error in line 17: Dbug6 S618 85,2
Error in line 27: A63 S618 36,1
Error in line 32: Dbug6 S866 261,1
Error in line 25: 4XcNcks S618 25,4
Error in line 35: 4XcNcks A63 63,7
